# masters-thesis

./: .gitignore  Dockerfile  README.md  download_documents.py  pdf_to_text.py  pyproject.toml  requirements.txt
Code/: Cache.py  PDF_reader.py  Presidio_OpenAI.py  Presidio_anoymization.py  Streamlit.py  Streamlit_Presidio.py
Code_not_relevant/: ChromaDB_RAG.py  RAG build and questions.ipynb  RAG run and ask.ipynb  download_documents.py
RAG/: Simple_RAG.py
SLR/: Grey_Literature.md  White_Literature.md
frontend/: Pinecone_loader.py  Presidio_helpers.py  Storage.py  Streamlit.py
src/: .deepeval_telemetry.txt  BBC_Stephen.ipynb  CSV_loader.py  DP.py  Data_loader.py  Database_management.py  Differential_Privacy.py  Enron_Stephen.ipynb  Enron_dataset.ipynb  Enron_evaluation.py  Enron_loader.py  Evaluation.py  LLMDP.py  PDF_reader.py  Pinecone_LlamaIndex.py  Pinecone_RAG.py  Presidio_OpenAI.py  Presidio_anoymization.py  Presidio_helpers.py  Storage.py  Streamlit.py  create_table.py  delete_table.py  question_generator.py  simple_RAG.py  test.py
src/Code_not_relevant/: Enron_dataset.ipynb  FragDenStaat_BMZ_attachments.py  Pinecone_RAG.py  Pinecone_loader.py  Streamlit_Presidio.py  question_generator.py  test.py
src/DPMLM/: DPMLM.py
src/Data/: CSV_loader.py  Data_loader.py  Database_management.py  PrivFill_BBC_preprocessing.ipynb  PrivFill_Enron_preprocessing.ipynb
src/Demo/: PDF_reader.py  Streamlit.py  Streamlit_Enron_BBC.py  enron_responses2.csv
src/Differential_privacy/: DP.py
src/Differential_privacy/DPMLM/: DPMLM.py
src/Differential_privacy/Diffractor/: Diffractor.py  requirements.txt
src/Differential_privacy/PrivFill/: LLMDP.py
src/Presidio/: Presidio.py  Presidio_NLP_engine.py  Presidio_OpenAI.py  Presidio_helpers.py
src/RAG/: Local_LlamaIndex.py  Pinecone_LlamaIndex.py  Response_evaluation.py  Response_generation.py  bbc_responses2_utility_2025.04.04_12:32.csv  enron_responses2_utility_2025.04.04_12:29.csv  openai_test.py
src/redaction_bench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
