[project]
name = "redaction-bench"
version = "0.1.0"
description = "GuardRAG: A privacy-preserving retrieval-augmented generation system that demonstrates various anonymization techniques and differential privacy methods"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.3.0",
    "langchain>=0.3.8",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.9",
    "pymupdf>=1.24.14",
    "python-dotenv>=1.0.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "pillow>=11.0.0",
    "llama-index>=0.9.0",
    "llama-index-vector-stores-pinecone>=0.1.0",
    "llama-index-embeddings-langchain>=0.1.0",
    "pinecone-client>=2.0.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "streamlit>=1.30.0",
    "streamlit-tags>=1.0.0",
    "st-annotated-text>=0.0.6",
    "pandas>=2.0.0",
    "natsort>=8.0.0",
    "plotly>=5.15.0",
    "spacy>=3.0.0",
    "flair>=0.12.0",
    "scikit-learn>=1.2.0",
    "nltk>=3.8.1",
    "rouge-score>=0.1.2",
    "sentence-transformers>=2.2.2",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "openai>=1.0.0",
    "psycopg2-binary",
    "chroma>=0.2.0",
    "wn",
    "importlib-resources",
    "faiss-cpu",
    "gensim",
    "diffprivlib"
]
